[package]
name = "ostrich-ca-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OstrichPKI Certificate Authority Server"

[[bin]]
name = "ostrich-ca-server"
path = "src/main.rs"

[dependencies]
# Internal crates
ostrich-ca = { path = "../../crates/ostrich-ca" }
ostrich-common = { path = "../../crates/ostrich-common" }
ostrich-db = { path = "../../crates/ostrich-db" }
ostrich-crypto = { path = "../../crates/ostrich-crypto" }
ostrich-audit = { path = "../../crates/ostrich-audit" }
ostrich-protocol = { path = "../../crates/ostrich-protocol" }
ostrich-x509 = { path = "../../crates/ostrich-x509" }
# Shared NATS message contract for the expiry-notify producer.
ostrich-notify-contract = { workspace = true }

# gRPC server (inter-service issuance API)
tonic = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Configuration
config = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Expiry-notification producer: scans expiring certs and publishes schedules to
# the notify-service over NATS JetStream.
async-nats = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = { workspace = true }
