[package]
name = "ostrich-ocsp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OstrichPKI OCSP Responder Server (RFC 6960)"

[[bin]]
name = "ostrich-ocsp-server"
path = "src/main.rs"

[dependencies]
# Internal crates
ostrich-ocsp = { path = "../../crates/ostrich-ocsp" }
ostrich-common = { path = "../../crates/ostrich-common" }
ostrich-db = { path = "../../crates/ostrich-db" }
ostrich-crypto = { path = "../../crates/ostrich-crypto" }
ostrich-audit = { path = "../../crates/ostrich-audit" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Configuration
clap = { workspace = true, features = ["derive", "env"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = { workspace = true }
