[package]
name = "ostrich-tamp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OstrichPKI Trust Anchor Management Server (RFC 5934 TAMP)"

[[bin]]
name = "ostrich-tamp-server"
path = "src/main.rs"

[dependencies]
# Internal crates
ostrich-tamp = { path = "../../crates/ostrich-tamp" }
ostrich-common = { path = "../../crates/ostrich-common" }
ostrich-db = { path = "../../crates/ostrich-db" }
ostrich-crypto = { path = "../../crates/ostrich-crypto" }
ostrich-x509 = { path = "../../crates/ostrich-x509" }
ostrich-audit = { path = "../../crates/ostrich-audit" }

# Web framework
axum = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Configuration
clap = { workspace = true, features = ["derive", "env"] }

# Encoding
base64 = { workspace = true }
pem-rfc7468 = { workspace = true }

# Sensitive key material handling (SI-12)
zeroize = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = { workspace = true }
