[package]
name = "ostrich-web-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OstrichPKI Web Administration Interface"

[[bin]]
name = "ostrich-web-ui"
path = "src/main.rs"

# The web-ui is now a server-only crate: an Axum BFF that serves the React
# console (built separately under web/ with Vite) and proxies to backends. The
# former Yew/WASM client was retired in the /next → / cutover.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Internal crates
ostrich-common = { workspace = true }
ostrich-audit = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Web framework (server)
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header", "cookie"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "set-header"] }
hyper = { workspace = true }
hyper-util = { workspace = true }

# OIDC/OAuth
openidconnect = { workspace = true }
oauth2 = { workspace = true }
cookie = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging/Tracing
tracing-subscriber = { workspace = true }

# Configuration
clap = { workspace = true, features = ["derive", "env"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# TLS
rustls = { workspace = true }
tokio-rustls = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []
