[package]
name = "ostrich-web-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OstrichPKI Web Administration Interface"

[[bin]]
name = "ostrich-web-ui"
path = "src/main.rs"

# The web-ui is now a server-only crate: an Axum BFF that serves the React
# console (built separately under web/ with Vite) and proxies to backends. The
# former Yew/WASM client was retired in the /next → / cutover.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Internal crates
ostrich-common = { workspace = true }
ostrich-audit = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Web framework (server)
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header", "cookie"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "set-header"] }
hyper = { workspace = true }
# client-legacy + http1: the pooled hyper client used by the proxy and the auth
# handlers to reach the backends (see server/backend_client.rs).
hyper-util = { workspace = true, features = ["client-legacy", "http1", "tokio"] }

# OIDC/OAuth
openidconnect = { workspace = true }
oauth2 = { workspace = true }
cookie = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging/Tracing
tracing-subscriber = { workspace = true }

# Configuration
clap = { workspace = true, features = ["derive", "env"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# TLS — HTTPS client to the CA backend. The CA's REST API serves TLS 1.3
# (optionally mTLS); web-ui must trust the CA's internal server certificate to
# reach it. hyper-rustls wires the rustls client config (aws-lc-rs/FIPS
# provider) into the pooled hyper client used by the proxy and auth handlers.
# NIST 800-53: SC-8 (transmission confidentiality), SC-13 (FIPS crypto).
rustls = { workspace = true }
tokio-rustls = { workspace = true }
# PEM loaders (CertificateDer::pem_file_iter / PrivateKeyDer::from_pem_file) used
# by backend_client are available under the default (alloc) features.
rustls-pki-types = { workspace = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1"] }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []
